--- a/package.json
+++ b/package.json
@@ -20,8 +20,15 @@
   },
   "homepage": "https://github.com/hamedb89/numberstepper.js",
   "dependencies": {
-    "jquery": "^2.1.3"
+    "jquery": "^2.1.3",
+    "browserify-shim": "~3.2.0"
   },
-  "devDependencies": {
+  "browserify-shim": {
+    "numberstepper": {
+      "depends": "jquery"
+    }
+  },
+  "browserify": {
+    "transform": [ "browserify-shim" ]
   }
 }
